# igra-download

./: .gitignore  README.md  aq2.yaml  aqueduct.yaml  environment.yml  pyproject.toml
src/igradownload/: download.py
